--- a/presentation.tex
+++ b/presentation.tex
@@ -1,5 +1,5 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} 
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} 
 \usetheme{Ilmenau}
 \usepackage{graphicx,verbatim,hyperref}
 \usepackage{textpos}
