add revision notes to to-do and fix a typo in draft

--- a/draft.tex
+++ b/draft.tex
@@ -112,7 +112,7 @@ Countries\footnote{Players will be referred to as countries, though it could als
  The probability of nature selecting high type for a given player is $p$. The probability of nature selecting low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight from how a third party can affect trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
 %might want to eventually add the stochastic type switch- or at least talk about how that changes analysis
 
-In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient $g_i$, where $i\in\left\{l,h\right\}$. For simplicity, let us initially assume $C(g_i)= g_i$. We will relax this assumption later.
+In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient $g_i$, where $i\in\left\{l,h\right\}$. For simplicity, we initially assume $C(g_i)= g_i$. We will relax this assumption later.
 
 Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs represented below. While not a good representation of all-out war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict, not a zero-sum short term war. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} %cite difference from fearon here?
 %LAKE More generally, the problem of war, on which you implicitly focus, is now understood as a pure bargaining game (i.e., zero sum). This is not well represented by the PD. You need to make the link – or differentiate – what you’re doing here from the Fearon-Powell models to which you appeal.
@@ -186,7 +186,7 @@ The third option is for distrustful countries to use concessions as a way of bui
 
 In the \emph{concessions separating equilibrium}, low types do not give concessions while high types give a concession of a certain size in period 0. If both countries receive concessions, they know the other is a high type and both play Trust in subsequent periods. Otherwise, if both players do not receive concessions, there is at least one low type so both countries play Fight in subsequent periods.
 
-The analysis is conducted with standard Incentive Compatibility and Individual Rationality constraints. Consider the commonly held grim trigger punishment path of the ``Fight, Fight'' equilibrium being played forever played forever if Fight is played by any party in any round. This paper will focus on separating equilibria in which high types make use of concessions to identify themselves in hopes of establishing Peace. Because we look at grim trigger punishments, there are essentially only 4 equilibrium combinations of strategies after concessions are given:
+The analysis is conducted with standard Incentive Compatibility and Individual Rationality constraints. Consider the commonly held grim trigger punishment path of the ``Fight, Fight'' equilibrium being played forever if Fight is played by any party in any round. This paper will focus on separating equilibria in which high types make use of concessions to identify themselves in hopes of establishing Peace. Because we look at grim trigger punishments, there are essentially only 4 equilibrium combinations of strategies after concessions are given:
 1) Both countries play Trust always, 
 2) Both play Fight always, 
 3) Country 1 plays Fight in round 1 while country 2 plays Trust, which is followed by both countries playing Fight from round 2 onwards and 
