--- a/notes.tex
+++ b/notes.tex
@@ -222,5 +222,10 @@ To-do list after Venice CesIfo 06/15/17:
 					\item $p=.1, \de_l = .5, \de_h = .75$. Choose $e=0$, but $\de_0 = 6.7$ and $\de_1 \geq 3$
 				\end{itemize}
 		\end{itemize}
+	\item From Eli four years ago: why can mediator do what the two sides cannot?
+		\begin{itemize}
+			\item How does this differ from binding arbitration?
+		\end{itemize}
+	\item Be clear about assumptions on cost of gifts; make statement in third paragraph of model section match
 \end{itemize}
 \end{document}
