update notes for progress on static version, other minor details

--- a/notes.tex
+++ b/notes.tex
@@ -59,7 +59,7 @@ bookmarksopen=true]{hyperref}
 \un{June 6, 2017}\\
 Want to develop result showing that mediator increases potential for peace
 \begin{itemize}
-	\item i.e. want to show mediator makes (Trust, Trust) and equilibrium over a larger parameter space than without mediator
+	\item i.e. want to show mediator makes (Trust, Trust) an equilibrium over a larger parameter space than without mediator
 \end{itemize}
 
 \vskip.2in
@@ -79,10 +79,13 @@ What do we know?
 		\end{itemize}
 \end{itemize}
 
-\vskip.5in
-Will need to start by assuming that $\de_h <$ threshold where separating with no concessions works.
+\vskip.4in
+Need to start by assuming that $\de_h <$ threshold where separating with no concessions works.
+\begin{itemize}
+	\item \textbf{Check to see whether Theorem 4 proof has to change.}
+\end{itemize}
 
-\vskip1in
+\vskip.4in
 Intermediate step for Theorem 4
 \begin{itemize}
 	\item Low type IC constraint to solve for equilibrium high type gift
@@ -207,11 +210,14 @@ To-do list after Venice CesIfo 06/15/17:
 				\]
 				Note that this threshold is smaller than $\frac{W}{T + D}$, the one we get without concessions having material benefit / harm
 		\end{itemize}
-	\item Jim Fearon: maybe get rid of repeated game and just parameterize a one-shot game; he has a paper about concessions being used against you; he also gave me the reference for another one but I've forgotten it
+	\item Jim Fearon: maybe get rid of repeated game and just parameterize a one-shot game (doens't work because concessions required for separation are too large; require future to recoup cost
+		\begin{itemize}
+			\item he has a paper about concessions being used against you; he also gave me the reference for another one but I've forgotten it
+		\end{itemize}
 	\item Someone who \textit{can't} cooperate under either $e=0$ or $e=1$ CAN cooperate under mediator
 		\begin{itemize}
 			\item In the absence of mediation, being able to burn money can help, but you still lose something
-			\item I still have a question about the overall game: if $e=0$ provides higher welfare if it were enforceable but it's not, do we just go with $e=1$? This question goes away if I get rid of the repeated game.
+			\item I still have a question about the overall game: if $e=0$ provides higher welfare if it were enforceable but it's not, do we just go with $e=1$?
 			\item Some parameters. For all of these, I take $W=8$, $D=5$, $T=10$
 				\begin{itemize}
 					\item $p=.4, \de_l = .45, \de_h = \de_{STC} = .53$. Choose $e=1$, but $\de_1 = .65$
