compile handout version of presentation (fix typo) for integration into paper

--- a/presentation.tex
+++ b/presentation.tex
@@ -318,7 +318,7 @@ Now benefit of concession is $eg$
 \begin{itemize}[<+->]
   \item Mechanism: if two high types, give concession and play `Trust'; Otherwise, no concession and `Fight'
 	\item Concession is necessary to get truthful revelation, but only to high type
-	\item Need cost of concession for low type to be not to large relative to cost for high type
+	\item Need cost of concession for low type to be not too large relative to cost for high type
 \end{itemize}
 \vskip.1in
 \pause
