remove differentiated costs (not necessary)

--- a/draft.tex
+++ b/draft.tex
@@ -112,7 +112,7 @@ Countries\footnote{Players will be referred to as countries, though it could als
  The probability of nature selecting high type for a given player is $p$. The probability of nature selecting low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight from how a third party can affect trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
 %might want to eventually add the stochastic type switch- or at least talk about how that changes analysis
 
-In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient $g_i$, where $i\in\left\{l,h\right\}$. For simplicity, we initially assume $C(g_i)= g_i$. We will relax this assumption later.
+In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient in the amount $g_i$, where $i\in\left\{1,2\right\}$. For simplicity, we assume $C(g_i)= g_i$.
 
 Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs represented below. While not a good representation of all-out war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict, not a zero-sum short term war. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} %cite difference from fearon here?
 %LAKE More generally, the problem of war, on which you implicitly focus, is now understood as a pure bargaining game (i.e., zero sum). This is not well represented by the PD. You need to make the link Ð or differentiate Ð what youÕre doing here from the Fearon-Powell models to which you appeal.
@@ -278,11 +278,11 @@ The model setup is as before, but instead of parties being free to give whatever
 
 $M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. The benchmark case analyzed in Sections~\ref{sec:bench} and \ref{sec:IC} requires the countries to send the same concession to both types, since types are private information.  $M$ can differentiate based on recipient's type. Otherwise, the setup is identical to the benchmark case.  
 
-Welfare is again considered as the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. In the analysis, incentive compatibility and individual rationality constraints must be satisfied. The revelation principle is used to attain truthful self-identification (Myerson 1979). For mediation to be useful, $C_l(\cdot)$ needs to be pointwise greater than $C_h(\cdot)$, and we will assume this. This means that a low type is not identical to a high type, and indeed bears greater costs for peaceful actions. This can be thought of as a leader who must explain peace to his people. If the people want to make peace with the rival, posturing for peace is not costly for the leader. But if the people do not want to make peace with the rival, the leader loses credibility by outwardly touting peace. Therefore taking a peaceful action is more costly, and perhaps even impossible. This low type leader can bluff in the bilateral setting but not, as we will see, when a mediator is present. 
-\\
+Welfare is again considered as the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. In the analysis, incentive compatibility and individual rationality constraints must be satisfied. The revelation principle is used to attain truthful self-identification (Myerson 1979). 
+
 \\
 {\bf Theorem 5:} A mediator can be used to eliminate inefficient concessions. \\
-\emph{Proof:}  $C_l(\cdot)> C_h(\cdot)$ as per the assumption above.  The low type IC ($pg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+pg_h$) binds, so the equilibrium benchmark gift is $g^{*}=p(X_{FT}^l-X_{FF}^l)$ and high type utility is $U_h^*= pX_{TT}+(1-p)X_{FF} - (1-p)g^*$). Under $M$, the low type IC can bind without having high types give a concession to low types. The equilibrium separating gift $g^{*M}$ will be larger than $g^*$ in this case, specifically 
+\emph{Proof:}  The low type IC ($pg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+pg_h$) binds, so the equilibrium benchmark gift is $g^{*}=p(X_{FT}^l-X_{FF}^l)$ and high type utility is $U_h^*= pX_{TT}+(1-p)X_{FF} - (1-p)g^*$). Under $M$, the low type IC can bind without having high types give a concession to low types. The equilibrium separating gift $g^{*M}$ will be larger than $g^*$ in this case, specifically 
 \be
 g^{*M}= \frac{p(X_{FT}^l-X_{FF}^l)}{1-p}
 \ee
@@ -292,12 +292,9 @@ U_h^M= pX_{TT}+(1-p)X_{FF}
 \ee
 because high types exchange concessions of the same value. $U_h^M>U_h^*$. Note that no additional wealth is created by $M$, but less is transferred to low types, and welfare is defined as high-type utility.\footnote{Low types IR constraint still binds and $U_l=X_{FF}$}  $\blacksquare$ 
 
-
-Since the low type IC constraint binds, the only way in which a mechanism can improve upon the benchmark case is by having asymmetric costs of giving for the types. As per Theorem 4, inefficiency is due to the high types giving an inefficient gift in order to separate while still being able to prevent low types from using concessions against the high types. If costs are disparate, under certain parameters the mediator can mandate concessions only between declared high types. This means there is no longer a need for inefficient concessions since concessions will never be used against the giver. Thus, a mediator is able to remove inefficiency in concession giving and bring willing parties to the table to give the gifts necessary to achieve peace. 
-
+The low type leader can bluff in the bilateral setting but not when a mediator is present. As per Theorem 4, inefficiency is due to the high types giving an inefficient gift in order to separate while still being able to prevent low types from using concessions against the high types. But because the benefits of giving a concession differ between the types (low types get one period of cheater's payoff, while high types get future peace), the mediator is able to mandate concessions only between declared high types. This means there is no longer a need for inefficient concessions since concessions will never be used against the giver. Thus, a mediator is able to remove inefficiency in concession giving and bring willing parties to the table to give the gifts necessary to achieve peace. 
 
 The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be a huge factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
-
 
 The value of truth telling by the mediator has been brought up in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction. In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
 
