clean up last page of appendix

--- a/draft.tex
+++ b/draft.tex
@@ -389,20 +389,25 @@ Combining equations (11) and (12), we have the condition for a concessions separ
 \be
 pX_{TT}^h-pX_{FF}^h - p(X_{FT}^l-X_{FF}^l) \geq 0
 \ee
-In terms of original variables, the condition for a concessions separating equilibrium to exist is:
+In terms of fundamentals, the condition for a concessions separating equilibrium to exist is:
 \be
 %p_1(\frac{T+D-W}{1-\delta_h}-p_2(T+D)\geq 0. point is the p's arent the same; i might have gotten them backwards. simplified this is:
-\frac{T+D-W}{1-\delta_h}-(T+D)\geq 0
+\delta_h \geq \frac{W}{T+D}
 \ee
+That is, there is no parameter restriction beyond our definition of what it means for a player to be a high type.
 $\blacksquare$\\
 
-The no-concessions separating equilibrium also will exist if equation (8) holds. In the case that both exist, the preferable equilibrium will be the one with a higher  payoff. The high types will prefer the concessions separating equilibrium if and only if
+The no-concessions separating equilibrium also will exist if equation (8) holds. In the case that both exist, the high types will prefer the concessions separating equilibrium if and only if
 \be
 pX_{TT}^h+(1-p)X_{FF}^h - g_h \geq p(\frac{T}{1- \delta_h}) +(1-p)({-D}+\frac{\delta_h(W-D)}{1- \delta_h} )
 \ee
 This is simplified to preferring the concessions separating equilibrium if and only if
 \be
- (1-p)W-p(T+D)\geq0.
+ (1-p)W-p(T+D)\geq 0
+\ee
+i.e.,
+\be
+ W\geq p(W + T+D)\geq 0
 \ee
 %note this can be simplified by using primals of X's, DO THIS!!!!!!!!!!!!!!!!
 
