--- a/notes.tex
+++ b/notes.tex
@@ -196,9 +196,12 @@ Next we get the threshold for $\de_h$ that is necessary for a concessions separa
 \newpage
 To-do list after Venice CesIfo 06/15/17:
 \begin{itemize}
+	\item From Eli four years ago: why can mediator do what the two sides cannot?
 	\item Add discussion of intuitive criterion to text (if I end up needing it): out of eqm beliefs put zero weight on types that can never gain from deviating from a fixed eqm outcome
-	\item Pin down whether it matters for mediator outcome if $c_h = c$ or $c_h = c(g)$
-	\item Incorporate mediator result into text; re-organize text so it matches June presentation more closely
+	\item Incorporate mediator result into text; re-organize text so it matches June presentation (re-worded Theorem 4, new Theorem 5)
+		\begin{itemize}
+			\item Careful of SWOC being chosen over STC ($\de_h$ threshold restriction?)
+		\end{itemize}
 	\item Note for mediator result:
 		\begin{itemize}
 			\item For two high types to cooperate in the mechanism, need large enough gift to screen out low types. They're still just reporting, so don't give a gift if not matched with another high type. PLUS when they're exchanging gifts, the gifts will actually be used for good:
@@ -228,9 +231,6 @@ To-do list after Venice CesIfo 06/15/17:
 					\item $p=.1, \de_l = .5, \de_h = .75$. Choose $e=0$, but $\de_0 = 6.7$ and $\de_1 \geq 3$
 				\end{itemize}
 		\end{itemize}
-	\item From Eli four years ago: why can mediator do what the two sides cannot?
-		\begin{itemize}
-			\item How does this differ from binding arbitration?
-		\end{itemize}
+
 \end{itemize}
 \end{document}
